# symmetrical-octo-funicular

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: architecture.md
src/codex_agent/: __init__.py
src/codex_agent/cli/: main.py
src/codex_agent/core/: __init__.py  config.py  models.py  orchestrator.py
src/codex_agent/dag/: __init__.py  engine.py
src/codex_agent/executor/: __init__.py  codex.py
src/codex_agent/inspector/: __init__.py  repository.py
src/codex_agent/persistence/: __init__.py  store.py
src/codex_agent/policy/: __init__.py  engine.py
src/codex_agent/providers/: __init__.py  base.py  github.py
src/codex_agent/utils/: logging.py
tests/: __init__.py
tests/unit/: test_dag.py  test_models.py  test_orchestrator.py
